Matrix testing